--- a/config.yml.dist
+++ b/config.yml.dist
@@ -1,14 +1,14 @@
-url: 'https://www.kijiji.ca/h-city-of-toronto/1700273'
-category: 'apartments,.+condos'
+url: 'https://www.kijiji.ca/b-apartments-condos/city-of-toronto/c37l1700273'
+category: '2 Bedroom'
 price_min: 1500
 price_max: 3000
 paging_max: 10
 radius: 10.0
-address: 'H0H0H0'
-latitude: 43.123456
-longitude: -79.123456
+address: 'M5G1P5'
+latitude: 43.6534829
+longitude: -79.3862826
 ad: 'offering'
 furnished: 0
 reject: 'basement,detached'
-reject_older_than: 84
+reject_older_than: 240
 accept: 'apartment,downtown'
