--- a/config.yml.dist
+++ b/config.yml.dist
@@ -1,5 +1,5 @@
-url: 'https://www.kijiji.ca/b-apartments-condos/city-of-toronto/c37l1700273'
-category: '2 Bedroom'
+url: 'https://www.kijiji.ca/b-for-rent/city-of-toronto/c30349001l1700273'
+category: 'Apartments & Condos for Rent'
 price_min: 1500
 price_max: 3000
 paging_max: 10
